move test activity to a library project

--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -1,9 +1,9 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 27
+
     defaultConfig {
-        applicationId "com.ninchat.testapp"
         minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
@@ -11,6 +11,7 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -26,5 +27,4 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(path: ':ninchatsdk')
 }
