--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-# -*- mode: gitignore; -*-
-
-# Emacs
-
-*~
-\#*\#
-/.emacs.desktop
-/.emacs.desktop.lock
-*.elc
-auto-save-list
-tramp
-.\#*
-
-# OSX
-.DS_Store
-
 # Built application files
 *.apk
 *.ap_
@@ -23,6 +7,12 @@ tramp
 
 # Java class files
 *.class
+
+# Java jar files
+*.jar
+
+# AAR files
+*.aar
 
 # Generated files
 bin/
@@ -48,35 +38,21 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# IntelliJ
+# Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/assetWizardSettings.xml
-.idea/misc.xml
-.idea/dictionaries
-.idea/libraries
-.idea/caches
+.idea/
 
 # Keystore files
-# Uncomment the following line if you do not want to check your keystore files in.
-#*.jks
+*.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
-
-# Google Services (e.g. APIs or Firebase)
-google-services.json
 
 # Freeline
 freeline.py
 freeline/
 freeline_project_description.json
 
-# fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
-fastlane/readme.md
+# Temp files
+*~
+\.*
