--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+# -*- mode: gitignore; -*-
+
+# Emacs
+
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# OSX
+.DS_Store
+
 # Built application files
 *.apk
 *.ap_
@@ -7,12 +23,6 @@
 
 # Java class files
 *.class
-
-# Java jar files
-*.jar
-
-# AAR files
-*.aar
 
 # Generated files
 bin/
@@ -38,21 +48,35 @@ proguard/
 # Android Studio captures folder
 captures/
 
-# Intellij
+# IntelliJ
 *.iml
-.idea/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/gradle.xml
+.idea/assetWizardSettings.xml
+.idea/misc.xml
+.idea/dictionaries
+.idea/libraries
+.idea/caches
 
 # Keystore files
-*.jks
+# Uncomment the following line if you do not want to check your keystore files in.
+#*.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
 
 # Freeline
 freeline.py
 freeline/
 freeline_project_description.json
 
-# Temp files
-*~
-\.*
+# fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
+fastlane/readme.md
