--- a/ninchatsdk/src/main/AndroidManifest.xml
+++ b/ninchatsdk/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ninchat.sdk">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application>
         <activity android:name=".ChatTestActivity" />
     </application>
