Update the look and feel of the library activities

--- a/ninchatsdk/src/main/AndroidManifest.xml
+++ b/ninchatsdk/src/main/AndroidManifest.xml
@@ -2,6 +2,6 @@
     package="com.ninchat.sdk">
     <uses-permission android:name="android.permission.INTERNET" />
     <application>
-        <activity android:name=".ChatTestActivity" />
+        <activity android:name=".ChatTestActivity" android:theme="@style/NinchatTheme" />
     </application>
 </manifest>
