--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -12,6 +12,8 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
+    dataBinding.enabled true
+
     buildTypes {
         release {
             minifyEnabled false
