Use the basic Activity as the base for the activities in this SDK

--- a/ninchatsdk/src/main/AndroidManifest.xml
+++ b/ninchatsdk/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
             android:theme="@style/NinchatTheme"
             android:label="@string/ninchat_contact_us" />
         <activity android:name=".activities.NinchatQueueActivity"
-            android:theme="@style/NinchatTheme"
-            android:label="@string/ninchat_contact_us" />
+            android:theme="@style/NinchatTheme.Back"
+            android:label="@string/ninchat_contact_us"
+            android:parentActivityName=".activities.NinchatActivity"/>
     </application>
 </manifest>
