--- a/ninchatsdk/src/main/AndroidManifest.xml
+++ b/ninchatsdk/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
         <activity
             android:name=".activities.NinchatReviewActivity"
             android:theme="@style/NinchatTheme" />
+        <activity
+            android:name=".activities.NinchatMediaActivity"
+            android:theme="@style/NinchatTheme" />
     </application>
 
 </manifest>
