Move the release from a separate folder to the root level of the project

--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -64,7 +64,7 @@ apply plugin: 'maven'
 
 uploadArchives {
     repositories.mavenDeployer {
-        def deployPath = file("${project.rootDir}/releases")
+        def deployPath = file("${project.rootDir}")
         repository(url: "file://${deployPath.absolutePath}")
         pom.project {
             groupId "com.ninchat"
