--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -49,7 +49,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    implementation 'com.ninchat:client:1.1.0-26'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'io.pristine:libjingle:11139@aar'
