--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'io.pristine:libjingle:11139@aar'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
