--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation 'com.ninchat:client:1.1.0-26'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'io.pristine:libjingle:11139@aar'
+    implementation 'org.webrtc:google-webrtc:1.0.26885'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     testImplementation 'junit:junit:4.12'
