--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -6,7 +6,7 @@ import org.ajoberstar.grgit.Grgit
 ext {
     // Read the app version information
     def git = Grgit.open(currentDir: projectDir)
-    def gitVersionName = git.describe().replaceFirst("v", "") // Optional v in the beginnning
+    def gitVersionName = git.describe().replaceFirst("v", "") // Optional v in the beginning
     def s = gitVersionName.split("-")
     def sp = s[0].split("\\.")
     versionMajor = Integer.parseInt(sp[0])   // 0..n
@@ -25,11 +25,11 @@ def calculateVersionName = {
 
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionName calculateVersionName()
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -50,8 +50,8 @@ android {
 
 dependencies {
     implementation 'com.ninchat:client:1.1.0-26'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'org.webrtc:google-webrtc:1.0.26885'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
