--- a/.gitignore
+++ b/.gitignore
@@ -55,9 +55,11 @@ captures/
 .idea/gradle.xml
 .idea/assetWizardSettings.xml
 .idea/misc.xml
+.idea/encodings.xml
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+.idea/codeStyles
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
