Added unit test for couple of classes (#128)
* Add kotlin and simple first ninchat configuration test

* Session manager test.

* Adding test for NinchatSessionManager

* Added mockitio android specific library
Added more unit test for session manager
 - audience metadata [ todo ]
 - session manager initiatation

* Able to mock -> spy class methods

* Was able to add 2% code coverage for NinchatSessionManager. Need to re-structured code in order to make methods and scope more testable.

* List of test that will be coverd for ninchat session unit test

* A very simple unit testing for NinchatSessionTest class

* Add unit test for ninchat user class

* Unit test
 - NinchatSessionCredentials
 - NinchatWebRTCServerInfo

* Unit test for NinchatQueue

* Adding ninchat option unit test.

* Test for Ninchat option

* Partial unit test for ninchat message. ( needs some rewrite to make it testable )

* Add test for NinchatFile

--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 
 import org.ajoberstar.grgit.Grgit
@@ -46,6 +48,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
 }
 
 dependencies {
@@ -56,8 +62,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-android:3.3.3'
+    testImplementation 'org.mockito:mockito-core:3.3.3'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 apply plugin: 'maven'
