Unit test for NinchatQuestionnairesBase

--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -52,6 +52,7 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
+            returnDefaultValues = true
         }
     }
 }
