--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -52,7 +52,6 @@ android {
     testOptions {
         unitTests {
             includeAndroidResources = true
-            returnDefaultValues = true
         }
     }
 }
@@ -71,6 +70,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    testImplementation group: 'org.json', name: 'json', version: '20200518'
 
 }
 
