--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    testImplementation group: 'org.json', name: 'json', version: '20200518'
+
 }
 
 apply plugin: 'maven'
