Added form recycler view  - text view  - edit text view

--- a/ninchatsdk/src/main/AndroidManifest.xml
+++ b/ninchatsdk/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
         <activity
             android:name=".activities.NinchatMediaActivity"
             android:theme="@style/NinchatTheme" />
+
+        <activity
+            android:name=".activities.NinchatPreAudienceQuestionnaireActivity"
+            android:theme="@style/NinchatTheme" />
     </application>
 
 </manifest>
