Added form recycler view  - Text view element with html tag

--- a/ninchatsdk/src/main/AndroidManifest.xml
+++ b/ninchatsdk/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
 
         <activity
             android:name=".activities.NinchatPreAudienceQuestionnaireActivity"
-            android:theme="@style/NinchatTheme" />
+            android:theme="@style/NinchatTheme.Questionnaire" />
     </application>
 
 </manifest>
