New activity to bypass and handle complex form

--- a/ninchatsdk/src/main/AndroidManifest.xml
+++ b/ninchatsdk/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
         <activity
             android:name=".activities.NinchatPreAudienceQuestionnaireActivity"
             android:theme="@style/NinchatTheme.Questionnaire" />
+
+        <activity
+            android:name=".activities.NinchatComplexQuestionnaireActivity"
+            android:theme="@style/NinchatTheme.Questionnaire" />
     </application>
 
 </manifest>
