--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'org.webrtc:google-webrtc:1.0.26885'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'org.greenrobot:eventbus:3.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-android:3.3.3'
