Don't recreate activity on configuration change

--- a/ninchatsdk/src/main/AndroidManifest.xml
+++ b/ninchatsdk/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
 
         <activity
             android:name=".activities.NinchatQuestionnaireActivity"
-            android:theme="@style/NinchatTheme.Questionnaire" />
+            android:theme="@style/NinchatTheme.Questionnaire"
+            android:configChanges="orientation|screenSize"/>
 
     </application>
 
