Kotlin as test implementation

--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -70,8 +70,7 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.3'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation group: 'org.json', name: 'json', version: '20200518'
 
 }
