--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -34,7 +34,7 @@ android {
         targetSdkVersion 28
         versionName calculateVersionName()
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     compileOptions {
@@ -58,8 +58,8 @@ android {
 
 dependencies {
     implementation 'com.ninchat:client:1.4.0-1'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'org.webrtc:google-webrtc:1.0.26885'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'org.greenrobot:eventbus:3.2.0'
@@ -68,8 +68,8 @@ dependencies {
     testImplementation 'org.mockito:mockito-android:3.3.3'
     testImplementation 'org.mockito:mockito-core:3.3.3'
     testImplementation 'org.robolectric:robolectric:4.3'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     testImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation group: 'org.json', name: 'json', version: '20200518'
 
