Network dispatcher class  - for most of the available methods

--- a/ninchatsdk/networkdispatcher/build.gradle
+++ b/ninchatsdk/networkdispatcher/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // ninchat api
+    implementation 'com.ninchat:client:1.4.0-1'
 }
