274/refactored session manager (#156)

--- a/ninchatsdk/src/main/AndroidManifest.xml
+++ b/ninchatsdk/src/main/AndroidManifest.xml
@@ -21,17 +21,17 @@
             android:name=".activities.NinchatActivity"
             android:theme="@style/NinchatTheme" />
         <activity
-            android:name=".activities.NinchatQueueActivity"
+            android:name=".ninchatqueue.view.NinchatQueueActivity"
             android:theme="@style/NinchatTheme" />
         <activity
             android:name=".activities.NinchatChatActivity"
             android:theme="@style/NinchatTheme"
             android:configChanges="orientation|screenSize"/>
         <activity
-            android:name=".activities.NinchatReviewActivity"
+            android:name=".ninchatreview.view.NinchatReviewActivity"
             android:theme="@style/NinchatTheme" />
         <activity
-            android:name=".activities.NinchatMediaActivity"
+            android:name=".ninchatmedia.view.NinchatMediaActivity"
             android:theme="@style/NinchatTheme" />
 
         <activity
