--- a/ninchatsdk/src/main/AndroidManifest.xml
+++ b/ninchatsdk/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
     <application>
         <activity
-            android:name=".activities.NinchatActivity"
+            android:name=".ninchatactivity.view.NinchatActivity"
             android:theme="@style/NinchatTheme" />
         <activity
             android:name=".ninchatqueue.view.NinchatQueueActivity"
@@ -35,7 +35,7 @@
             android:theme="@style/NinchatTheme" />
 
         <activity
-            android:name=".activities.NinchatQuestionnaireActivity"
+            android:name=".ninchatquestionnaire.view.NinchatQuestionnaireActivity"
             android:theme="@style/NinchatTheme.Questionnaire"
             android:configChanges="orientation|screenSize"/>
 
