--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -56,8 +56,9 @@ android {
     }
 }
 
+
 dependencies {
-    implementation 'com.ninchat:client:1.4.0-1'
+    implementation 'com.ninchat:client:1.4.1'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
