--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -90,6 +90,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'com.airbnb.android:paris:1.7.3'
+
 }
 
 apply plugin: 'maven'
