--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ allprojects {
         maven {
             url "https://raw.github.com/somia/ninchat-sdk-android/master"
         }
+        maven {
+            url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
+        }
     }
 }
 
