close chat : add action to chat end button handler

--- a/ninchatsdk/src/main/AndroidManifest.xml
+++ b/ninchatsdk/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:name=".ninchatqueue.view.NinchatQueueActivity"
             android:theme="@style/NinchatTheme" />
         <activity
-            android:name=".activities.NinchatChatActivity"
+            android:name=".ninchatchatactivity.view.NinchatChatActivity"
             android:theme="@style/NinchatTheme"
             android:configChanges="orientation|screenSize"/>
         <activity
