--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ allprojects {
         maven {
             url "https://raw.github.com/somia/ninchat-sdk-android/master"
         }
+        maven { url 'https://jitpack.io' }
     }
 }
 
