--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath 'org.ajoberstar:grgit:2.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
@@ -24,6 +24,12 @@ allprojects {
         jcenter()
         maven {
             url "https://raw.github.com/somia/ninchat-sdk-android/master"
+        }
+        maven {
+            url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
+        }
+        maven {
+            url "https://maven.google.com"
         }
         maven { url 'https://jitpack.io' }
     }
