webrtc-library/gradle: add gradle script to publish the library

--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -33,6 +33,10 @@ android {
         minSdkVersion 23
         targetSdkVersion 33
         versionName calculateVersionName()
+        versionCode 1
+
+        buildConfigField 'String', 'VERSION_NAME', "\"${versionName}\""
+        buildConfigField 'int', 'VERSION_CODE', "1"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
@@ -89,17 +93,36 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'com.github.webrtc-sdk:android:104.5112.05'
     implementation 'com.airbnb.android:paris:1.7.3'
-
 }
 
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
+
+publishing {
+    repositories {
+        maven {
+            def deployPath = file("${project.rootDir}")
+            url "file://${deployPath.absolutePath}"
+        }
+    }
+    publications {
+        maven(MavenPublication) {
+            groupId "com.ninchat"
+            artifactId "libwebrtc"
+            version "104.0.0"
+
+            artifact("../webrtc-sdk/libwebrtc.aar")
+        }
+    }
+
+}
 
 uploadArchives {
     repositories.mavenDeployer {
         def deployPath = file("${project.rootDir}")
         repository(url: "file://${deployPath.absolutePath}")
+
         pom.project {
             groupId "com.ninchat"
             artifactId "sdk"
