--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.airbnb.android:paris:1.7.3'
+    implementation 'com.ninchat:libwebrtc:104.0.0'
 }
 
 apply plugin: 'maven'
