SDK/gradle: remove un-necessary buildConfigField

--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -28,15 +28,11 @@ def calculateVersionName = {
 
 android {
     compileSdkVersion 33
-
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 33
         versionName calculateVersionName()
         versionCode 1
-
-        buildConfigField 'String', 'VERSION_NAME', "\"${versionName}\""
-        buildConfigField 'int', 'VERSION_CODE', "1"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
@@ -94,6 +90,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.airbnb.android:paris:1.7.3'
+    implementation 'com.ninchat:libwebrtc:104.0.0'
 }
 
 apply plugin: 'maven'
