--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,9 @@ allprojects {
             url "https://raw.github.com/somia/ninchat-sdk-android/master"
         }
         maven {
-            url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
-        }
-        maven {
             url "https://maven.google.com"
         }
+        maven { url "file:/tmp/repo" }
     }
 }
 
