--- a/ninchatsdk/build.gradle
+++ b/ninchatsdk/build.gradle
@@ -34,8 +34,8 @@ android {
         versionName calculateVersionName()
         versionCode 1
 
-        buildConfigField 'String', 'VERSION_NAME', "\"${versionName}\""
-        buildConfigField 'int', 'VERSION_CODE', "1"
+        // buildConfigField 'String', 'VERSION_NAME', "\"${versionName}\""
+        // buildConfigField 'int', 'VERSION_CODE', "1"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
@@ -93,7 +93,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.airbnb.android:paris:1.7.3'
-    implementation ('org.jitsi.react:jitsi-meet-sdk:0.15.1') { transitive = true }
+    implementation 'com.ninchat:libwebrtc:106.0.3'
 }
 
 apply plugin: 'maven'
