--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
@@ -27,6 +28,9 @@ allprojects {
         }
         maven {
             url "https://maven.google.com"
+        }
+        maven {
+            url "https://jitpack.io"
         }
     }
 }
